Bug 1576263 - Conditionally include profiler functionality only where it's supported. r=whawkins,njn a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D44343